# gitbooks-scraper

./: doclinks.txt  format.json  main.py  output.json  pyproject.toml  requirements.txt  utils.py
