[tool.poetry]
name = "doc-scraper"
version = "0.1.0"
description = ""
authors = ["yunkiwon <kyyunkiwon@gmail.com>"]
readme = "README.md"
packages = [{include = "doc_scraper"}]

[tool.poetry.dependencies]
python = "^3.10"
selenium = "^4.8.0"
requests = "^2.28.2"
bs4 = "^0.0.1"
gpt-index = "^0.4.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
